tests/compile_fail/ready_valid_macro_malformed_connect.stderr
error: expected `=>`
  --> tests/compile_fail/ready_valid_macro_malformed_connect.rs:14:26
   |
14 |             connect input: output;
   |                          ^
